LightningAssignment/force-app/main/default/objects/Model__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City car</fullName>
            </value>
            <value>
                <fullName>Subcompact car</fullName>
            </value>
            <value>
                <fullName>Compact car</fullName>
            </value>
            <value>
                <fullName>Mid-size car</fullName>
            </value>
            <value>
                <fullName>Entry-level luxury car</fullName>
            </value>
            <value>
                <fullName>Full-size car</fullName>
            </value>
            <value>
                <fullName>Mid-size luxury car</fullName>
            </value>
            <value>
                <fullName>Full-size luxury</fullName>
            </value>
            <value>
                <fullName>Personal luxury car</fullName>
            </value>
            <value>
                <fullName>Grand tourer</fullName>
            </value>
            <value>
                <fullName>Supercar</fullName>
            </value>
            <value>
                <fullName>Convertible</fullName>
            </value>
            <value>
                <fullName>Roadster</fullName>
            </value>
            <value>
                <fullName>Mini MPV</fullName>
            </value>
            <value>
                <fullName>Compact MPV</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Subcompact SUV</fullName>
            </value>
            <value>
                <fullName>Compact SUV</fullName>
            </value>
            <value>
                <fullName>Mid-size SUV</fullName>
            </value>
            <value>
                <fullName>Full-size SUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>