LightningAssignment/force-app/main/default/objects/Model__c/fields/MPG__c.field-meta.xml
<CustomField>
    <fullName>MPG__c</fullName>
    <label>MPG</label>
    <length>60</length>
    <type>Text</type>
</CustomField>